Fixed error/title text size are aligned. https://trello.com/c/mYqpoKQN/6-%D1%81%D0%B4%D0%B5%D0%BB%D0%B0%D1%82%D1%8C-%D0%B2%D0%B8%D0%B4%D0%B8%D0%BC%D1%8B%D0%B5-%D1%80%D0%B0%D0%B7%D0%BC%D0%B5%D1%80%D1%8B-%D1%88%D1%80%D0%B8%D1%84%D1%82%D0%BE%D0%B2-%D0%B2-%D0%B7%D0%B0%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BA%D0%B5-%D0%BF%D0%BE%D0%BB%D1%8F-%D1%84%D0%BE%D1%80%D0%BC%D1%8B-%D0%B8-%D1%82%D0%B5%D0%BA%D1%81%D1%82%D0%B0-%D0%BE%D1%88%D0%B8%D0%B1%D0%BE%D1%87%D0%BD%D0%BE%D0%B3%D0%BE-%D0%B7%D0%BD%D0%B0%D1%87%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BF%D0%BE%D0%BB%D1%8F-%D0%BE%D0%B4%D0%B8%D0%BD%D0%B0%D0%BA%D0%BE%D0%B2%D1%8B%D0%BC%D0%B8

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -310,6 +310,24 @@ main > .container {
    }
 }
 
+.input-field label:not(.label-icon).active {
+   height: 4.5rem;
+}
+
+.select-wrapper + label {
+   position: absolute;
+   top: 0;
+   left: 0;
+   height: 4.5rem;
+   font-size: 1rem;
+   cursor: text;
+   transition: transform .2s ease-out;
+   transform-origin: 0% 100%;
+   text-align: initial;
+   transform: translateY(12px);
+   pointer-events: none;
+}
+
 // this should be fixed in various cases
 .error {
    color: #F44336;
@@ -317,6 +335,10 @@ main > .container {
    transition: .2s opacity ease-out, .2s color ease-out;
    box-sizing: inherit;
    white-space: nowrap;
+   font-size: 0.8rem;
+}
+
+label.active .error {
    font-size: 1rem;
 }
 
